apps/vaultwarden/migrate-data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp
  namespace: restricted
spec:
  containers:
    - name: tmp
      image: instrumentisto/rsync-ssh
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - mountPath: "/data"
          name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: vaultwarden-pvc
