apps/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
  namespace: restricted
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          volumeMounts:
            - name: vaultwarden-vol
              mountPath: /data
          ports:
            - containerPort: 80
      volumes:
        - name: vaultwarden-vol
          persistentVolumeClaim:
            claimName: vaultwarden-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: restricted
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 38081
      targetPort: 80
  type: ClusterIP
